data/derived/comb/progs/unify/prog8777.ml.out
Characters 69-70:
  | h::t -> if (getHeads (explode x)) = [] 
                                  ^
Error: This expression has type 'a list
       but an expression was expected of type string
